tests/baselines/reference/parserMemberVariableDeclaration3.errors.txt
parserMemberVariableDeclaration3.ts(2,10): error TS1029: 'public' modifier must precede 'static' modifier.


==== parserMemberVariableDeclaration3.ts (1 errors) ====
    class C {
      static public Foo;
             ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
    }